--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         padding:12px;width:100%;border:none;border-radius:5px;
         font-size:18px;cursor:pointer;color:#fff;background:#28a745;
         animation: blink 1.5s infinite;
+        text-decoration: none;
+        display: inline-block;
+        text-align: center;
     }
     @keyframes blink {
         0%,100% {background-color:#28a745;}
@@ -84,6 +87,7 @@
 
     <div id="resultPage" style="display:none;">
         <div class="result" id="loanDetails"></div>
+        <a href="https://loan007.github.io/LOAN/" class="btn">Apply</a>
         <button class="back-btn" onclick="goBack()">Back</button>
     </div>
 </div>
