--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
 <div class="container" id="loanPage" style="display:none;">
     <div class="title">Capital Lanka</div>
     <input type="number" id="amount" placeholder="Enter amount (40,000 - 600,000)">
+    <!-- First button says Calculate -->
+    <button class="btn" onclick="applyLoan()">Calculate</button>
+
     <div id="resultPage" style="display:none;">
         <div class="result" id="loanDetails"></div>
+        <!-- Second button says Apply -->
         <a href="https://loan007.github.io/LOAN/" class="btn">Apply</a>
         <button class="back-btn" onclick="goBack()">Back</button>
     </div>
