--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Capital Lanka Loan</title>
+<title>Zen Capital Loan</title>
 <style>
     * {margin:0;padding:0;box-sizing:border-box;font-family:sans-serif;}
     body {background:#fff;display:flex;justify-content:center;align-items:center;height:100vh;}
@@ -78,7 +78,7 @@
 
 <!-- Loan Form -->
 <div class="container" id="loanPage" style="display:none;">
-    <div class="title">Capital Lanka</div>
+    <div class="title">Zen Capital</div>
     <input type="number" id="amount" placeholder="Enter amount (40,000 - 600,000)">
     <button class="btn" onclick="applyLoan()">Apply</button>
 
